--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
               <p style="text-align:center">
                 <a target="_blank" href="mailto:harine@cs.washington.edu"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/harine">GitHub</a> &nbsp;/&nbsp;
-                <a href="https://scholar.google.com/citations?user=-A_XIrcAAAAJ&hl=en>Google Scholar</a> &nbsp;/&nbsp;
+                <a href="https://scholar.google.com/citations?user=-A_XIrcAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/harineravi"> LinkedIn </a>
               </p>
             </td>
@@ -60,7 +60,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm interested in computer vision, machine learning, optimization, graphics and robotics.
+                I'm interested in robotics, perception, and machine learning.
               </p>
             </td>
           </tr>
@@ -117,8 +117,8 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
-              <h2>Intel Projects</h2>
-              <p>Besides my work on the RealSense depth sensors and the publications above, a sampling of my publicly disclosed work
+              <h2>Industry Experience</h2>
+              <p>Here are some of my professional projects and industry contributions.
               </p>
             </td>
           </tr>
@@ -127,7 +127,7 @@
 
           {% for post in site.posts %}
           {% for cat in post.categories %}
-          {% if cat == 'Intel' %}
+          {% if cat == 'industry' %}
           <tr>
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
               <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
@@ -194,7 +194,7 @@
 
           {% for post in site.posts %}
           {% for cat in post.categories %}
-          {% if cat != 'research' and cat != 'Intel' %}
+          {% if cat != 'research' and cat != 'industry' %}
           <tr>
             <td style="padding:2.5%;width:25%;vertical-align:middle;min-width:120px">
               <img src="/tn{{post.image}}" alt="project image" style="width:auto; height:auto; max-width:100%;" />
