--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,10 +34,10 @@
                 Harine Ravichandiran
               </h1>
               <p>I am a PhD student and NSF CSGrad4US Fellow at the Paul G. Allen School of Computer Science and Engineering at the University of Washington, where I am advised by Prof. Byron Boots. 
-
+<!-- 
               </p>
               <p>
-                My research lies at the intersection of robot learning and perception, aiming to develop collaborative robotic systems capable of performing complex tasks in unstructured environments.
+                 -->
               </p>
               <p>
                 Before joining UW, I worked on autonomous vehicles at Overland AI and Waymo. I earned my Master’s and Bachelor’s degrees from Stanford University.
@@ -46,7 +46,8 @@
                 <a target="_blank" href="mailto:harine@cs.washington.edu"> Email</a> &nbsp;/&nbsp;
                 <a href="https://github.com/harine">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://scholar.google.com/citations?user=-A_XIrcAAAAJ&hl=en">Google Scholar</a> &nbsp;/&nbsp;
-                <a href="https://www.linkedin.com/in/harineravi"> LinkedIn </a>
+                <a href="https://www.linkedin.com/in/harineravi"> LinkedIn </a> &nbsp;/&nbsp;
+                <a href="https://bsky.app/profile/harineravi.bsky.social"> Bluesky </a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
@@ -60,7 +61,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Research</h2>
               <p>
-                I'm interested in robotics, perception, and machine learning.
+                My research lies at the intersection of robot learning and perception, aiming to develop collaborative robotic systems capable of performing complex tasks in unstructured environments.
               </p>
             </td>
           </tr>
@@ -111,10 +112,14 @@
           {% endfor %}
           {% endfor %}
         </table>
+
+
+        <!-- //this section is not currently used: for industry and personal projects -->
+        <!-- <br>
         <br>
-        <br>
-        <br>
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+        <br> -->
+        
+        <!-- <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Industry Experience</h2>
@@ -244,21 +249,21 @@
           {% endif %}
           {% endfor %}
           {% endfor %}
-        </table>
+        </table> -->
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
           <tr>
             <td style="padding:0px">
               <br>
               <p style="text-align:center;font-size:small;">
-                Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
+                Forked from <a style="font-size:small;" href="https://github.com/leonidk/leonidk.github.io">Leonid Keselman's Website</a>
               </p>
             </td>
           </tr>
         </table>
       </td>
     </tr>
-  </table>
+  </table> 
 </body>
 
 </html>
