--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,9 @@
           </tr>
         </table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+<!-- 
+          //uncomment this section when there are research posts
+
 
           {% for post in site.posts %}
           {% for cat in post.categories %}
@@ -111,7 +114,7 @@
           {% endif %}
           {% endfor %}
           {% endfor %}
-        </table>
+        </table> -->
 
 
         <!-- //this section is not currently used: for industry and personal projects -->
